# libgp_interface

./: CMakeLists.txt  README.md
include/: libgp_interface.h
src/: libgp_interface.cc
